--- a/intermid_html_css/Grid_Practice/styles.css
+++ b/intermid_html_css/Grid_Practice/styles.css
@@ -1,4 +1,4 @@
-*{box-sizing: border-box;
+/* *{box-sizing: border-box;
 margin:0;
 padding:0;
 }
@@ -8,13 +8,13 @@ body{
     margin:0 auto;
 }
 .container>div:nth-child(1){
-grid-column: 1/3;
+grid-column: 1/3; */
 
-}
-.container{
+/* } */
+/* .container{
 display:grid;
 grid-template-rows:  50px 50px 50px 50px 50px ;
-grid-template-columns: 100px;
+grid-template-columns: 100px; */
 
 /* template ->track */
 /* or use css f'n repeat */
@@ -25,9 +25,75 @@ grid-template-columns: 100px;
 /* justify-content: space-evenly;
 align-content: space-evenly; */
 /* column-gap: 10px; */
-grid-auto-flow: column;
+/* grid-auto-flow: column;
 }
 .container>div{
     border:2px solid black;
     padding:1rem 0;
+} */
+ 
+
+*
+{
+    box-sizing: border-box;
+margin:0;
+padding:0;
 }
+html,body {
+    background-color: white;
+height:100%;
+
+}
+body{
+    padding:1rem;
+}
+
+
+
+.container{
+    display: grid;
+          background-color: lightblue;
+          padding:1rem;
+grid-template-rows: repeat(2,1fr);
+grid-auto-rows: 1fr;
+grid-template-columns: repeat(auto-fit,minmax(230px,1fr));
+gap:1rem;
+overflow: auto;
+    width:100%;
+    height:100%;
+  
+overflow: scroll;
+}
+.container>div{
+    border:1px solid black;
+   font-size: 32px;
+   text-align: center;
+   display: grid;
+   align-items: center;
+
+}
+/* #living-room{
+    grid-column: 1/5;
+    grid-row: 3/6;
+}
+#kitchen{
+    grid-column: 1/2;
+    grid-row: 1/;
+}
+#closet{
+    grid-column:4/5 ;
+  grid-row: 1/2;
+}
+#bathroom{
+   grid-row: 3/4;
+grid-column: 5/6;
+}
+#bedroom{
+    grid-row: 1/3;
+    grid-column: 2/4;
+}
+#bedroom2{
+    grid-row: 1/3;
+    grid-column: 4/6;
+    align-self:self-end;
+} */
